--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -44,17 +44,17 @@ spiffs_create_partition_image(ui ../spiffs/ui FLASH_IN_PROJECT)
 
 # sdkconfig sanity checks
 if($ENV{WILLOW_SDKCONFIG_SANITY_CHECKS})
-    if(CONFIG_WILLOW_USE_WIS AND NOT CONFIG_SERVER_URI MATCHES "^https?://")
+    if(CONFIG_WILLOW_USE_WIS AND NOT CONFIG_WILLOW_WIS_SERVER_URL MATCHES "^https?://")
         message(FATAL_ERROR "Willow WIS URL must include URL scheme")
     endif()
 
     if (NOT CONFIG_WILLOW_ETHERNET)
-        string(REGEX MATCH "^[ -~]+" WIFI_PASSPHRASE "${CONFIG_WIFI_PASSWORD}")
-        if(NOT "${CONFIG_WIFI_PASSWORD}" STREQUAL "${WIFI_PASSPHRASE}")
+        string(REGEX MATCH "^[ -~]+" WIFI_PASSPHRASE "${CONFIG_WILLOW_WIFI_PASSWORD}")
+        if(NOT "${CONFIG_WILLOW_WIFI_PASSWORD}" STREQUAL "${WIFI_PASSPHRASE}")
             message(FATAL_ERROR "Wi-Fi WPA passphrase must only contain ASCII characters")
         endif()
 
-        string(LENGTH "${CONFIG_WIFI_PASSWORD}" WIFI_PLEN)
+        string(LENGTH "${CONFIG_WILLOW_WIFI_PASSWORD}" WIFI_PLEN)
         if(WIFI_PLEN LESS 8 OR WIFI_PLEN GREATER 63)
             message(FATAL_ERROR "Wi-Fi WPA passphrase must be between 8 and 63 ASCII characters")
         endif()
@@ -65,7 +65,7 @@ if($ENV{WILLOW_SDKCONFIG_SANITY_CHECKS})
             message(FATAL_ERROR "Home Assistant host must not contain URL scheme")
         endif()
 
-        string(LENGTH "${CONFIG_HOMEASSISTANT_TOKEN}" HASS_TLEN)
+        string(LENGTH "${CONFIG_WILLOW_ENDPOINT_HOMEASSISTANT_TOKEN}" HASS_TLEN)
         if(HASS_TLEN EQUAL 0)
             message(FATAL_ERROR "Home Assistant endpoint configured without token")
         endif()
