treewide: set TAG per source file
Currently setting a TAG in source files that include shared.h we get
redefintion errors. Solve this removing TAG from shared.h and setting a
TAG per source file where ESP_LOG macros are used.

As esp_log_level_set only supports "*" but not "WILLOW/*", we need to
set the log level for all these tags. To not further bloat main.c with
all these calls, move logging initialization to log.c.

Oneliner to generate the calls:

git grep "static const char" | awk '{ print $6 }' | sed 's/;$//' | sort | while read f ; do printf "    esp_log_level_set(%s, WILLOW_LOG_LEVEL);\n" "$f"; done

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -7,6 +7,7 @@ set(COMPONENT_SRCS
     "endpoint/rest.c"
     "http.c"
     "input.c"
+    "log.c"
     "lv_img_hand_left.c"
     "network.c"
     "ota.c"
